@@ -50,49 +50,37 @@ import com.gameserver.util.Util;
 import com.util.ResourceUtil;
 import com.util.database.L2DatabaseFactory;
 
-public class ClanTable
-{
+public class ClanTable {
 	private static Log _log = LogFactory.getLog(ClanTable.class);
 
 	private static ClanTable _instance;
 
 	private Map<Integer, L2Clan> _clans;
 
-	public static ClanTable getInstance()
-	{
-		if(_instance == null)
-		{
+	public static ClanTable getInstance() {
+		if (_instance == null) {
 			_instance = new ClanTable();
 		}
 
 		return _instance;
 	}
 
-	public L2Clan[] getClans()
-	{
+	public L2Clan[] getClans() {
 		return _clans.values().toArray(new L2Clan[_clans.size()]);
 	}
 
-	public int getTopRate(int clan_id)
-	{
+	public int getTopRate(int clan_id) {
 		L2Clan clan = getClan(clan_id);
-		if(clan.getLevel() < 3)
-		{
+		if (clan.getLevel() < 3) {
 			return 0;
 		}
 		int i = 1;
-		for(L2Clan clans : getClans())
-		{
-			if(clan != clans)
-			{
-				if(clan.getLevel() < clans.getLevel())
-				{
+		for (L2Clan clans : getClans()) {
+			if (clan != clans) {
+				if (clan.getLevel() < clans.getLevel()) {
 					i++;
-				}
-				else if(clan.getLevel() == clans.getLevel())
-				{
-					if(clan.getReputationScore() <= clans.getReputationScore())
-					{
+				} else if (clan.getLevel() == clans.getLevel()) {
+					if (clan.getReputationScore() <= clans.getReputationScore()) {
 						i++;
 					}
 				}
@@ -103,31 +91,25 @@ public class ClanTable
 		return i;
 	}
 
-	private ClanTable()
-	{
+	private ClanTable() {
 		_clans = new FastMap<Integer, L2Clan>();
 		L2Clan clan;
 		Connection con = null;
-		try
-		{
+		try {
 			con = L2DatabaseFactory.getInstance().getConnection();
 			PreparedStatement statement = con.prepareStatement("SELECT clan_id FROM clan_data");
 			ResultSet result = statement.executeQuery();
 
 			int clanCount = 0;
 
-			while(result.next())
-			{
-				_clans.put(Integer.parseInt(result.getString("clan_id")), new L2Clan(Integer.parseInt(result.getString("clan_id"))));
+			while (result.next()) {
+				_clans.put(Integer.parseInt(result.getString("clan_id")),
+						new L2Clan(Integer.parseInt(result.getString("clan_id"))));
 				clan = getClan(Integer.parseInt(result.getString("clan_id")));
-				if(clan.getDissolvingExpiryTime() != 0)
-				{
-					if(clan.getDissolvingExpiryTime() < System.currentTimeMillis())
-					{
+				if (clan.getDissolvingExpiryTime() != 0) {
+					if (clan.getDissolvingExpiryTime() < System.currentTimeMillis()) {
 						destroyClan(clan.getClanId(), con);
-					}
-					else
-					{
+					} else {
 						scheduleRemoveClan(clan.getClanId());
 					}
 				}
@@ -137,33 +119,25 @@ public class ClanTable
 			statement = null;
 
 			_log.info("Clans: Loaded " + clanCount + " clans from the database.");
-		}
-		catch(Exception e)
-		{
+		} catch (Exception e) {
 			_log.warn("data error on ClanTable: " + e);
 			e.printStackTrace();
-		}
-		finally
-		{
-			ResourceUtil.closeConnection(con); 
+		} finally {
+			ResourceUtil.closeConnection(con);
 		}
 
 		restorewars();
 	}
 
-	public L2Clan getClan(int clanId)
-	{
-		L2Clan clan = _clans.get(new Integer(clanId));
+	public L2Clan getClan(int clanId) {
+		L2Clan clan = _clans.get(Integer.valueOf(clanId));
 
 		return clan;
 	}
 
-	public L2Clan getClanByName(String clanName)
-	{
-		for(L2Clan clan : getClans())
-		{
-			if(clan.getName().equalsIgnoreCase(clanName))
-			{
+	public L2Clan getClanByName(String clanName) {
+		for (L2Clan clan : getClans()) {
+			if (clan.getName().equalsIgnoreCase(clanName)) {
 				return clan;
 			}
 		}
@@ -171,38 +145,33 @@ public class ClanTable
 		return null;
 	}
 
-	public L2Clan createClan(L2PcInstance player, String clanName)
-	{
-		if(null == player)
-		{
+	public L2Clan createClan(L2PcInstance player, String clanName) {
+		if (null == player) {
 			return null;
 		}
 
-		if(10 > player.getLevel())
-		{
+		if (10 > player.getLevel()) {
 			player.sendPacket(new SystemMessage(SystemMessageId.YOU_DO_NOT_MEET_CRITERIA_IN_ORDER_TO_CREATE_A_CLAN));
 			return null;
 		}
 
-		if(0 != player.getClanId())
-		{
+		if (0 != player.getClanId()) {
 			player.sendPacket(new SystemMessage(SystemMessageId.FAILED_TO_CREATE_CLAN));
 			return null;
 		}
 
-		if(System.currentTimeMillis() < player.getClanCreateExpiryTime())
-		{
+		if (System.currentTimeMillis() < player.getClanCreateExpiryTime()) {
 			player.sendPacket(new SystemMessage(SystemMessageId.YOU_MUST_WAIT_XX_DAYS_BEFORE_CREATING_A_NEW_CLAN));
 			return null;
 		}
 
-		if(!isValidClanName(player, clanName))
-		{
+		if (!isValidClanName(player, clanName)) {
 			return null;
 		}
 
 		L2Clan clan = new L2Clan(IdFactory.getInstance().getNextId(), clanName);
-		L2ClanMember leader = new L2ClanMember(clan, player.getName(), player.getLevel(), player.getClassId().getId(), player.getObjectId(), player.getPledgeType(), player.getPowerGrade(), player.getTitle());
+		L2ClanMember leader = new L2ClanMember(clan, player.getName(), player.getLevel(), player.getClassId().getId(),
+				player.getObjectId(), player.getPledgeType(), player.getPowerGrade(), player.getTitle());
 
 		clan.setLeader(leader);
 		leader.setPlayerInstance(player);
@@ -211,7 +180,7 @@ public class ClanTable
 		player.setPledgeClass(L2ClanMember.calculatePledgeClass(player));
 		player.setClanPrivileges(L2Clan.CP_ALL);
 
-		_clans.put(new Integer(clan.getClanId()), clan);
+		_clans.put(Integer.valueOf(clan.getClanId()), clan);
 
 		player.sendPacket(new MagicSkillUser(player, 5103, 1, 1000, 0));
 		player.sendPacket(new PledgeShowInfoUpdate(clan));
@@ -225,41 +194,33 @@ public class ClanTable
 		return clan;
 	}
 
-	public boolean isValidClanName(L2PcInstance player, String clanName)
-	{
-		if(!Util.isAlphaNumeric(clanName) || clanName.length() < 2)
-		{
+	public boolean isValidClanName(L2PcInstance player, String clanName) {
+		if (!Util.isAlphaNumeric(clanName) || clanName.length() < 2) {
 			player.sendPacket(new SystemMessage(SystemMessageId.CLAN_NAME_INCORRECT));
 			return false;
 		}
 
-		if(clanName.length() > 16)
-		{
+		if (clanName.length() > 16) {
 			player.sendPacket(new SystemMessage(SystemMessageId.CLAN_NAME_TOO_LONG));
 			return false;
 		}
 
-		if(getClanByName(clanName) != null)
-		{
+		if (getClanByName(clanName) != null) {
 			player.sendPacket(new SystemMessage(SystemMessageId.S1_ALREADY_EXISTS).addString(clanName));
 			return false;
 		}
 
 		Pattern pattern;
-		try
-		{
+		try {
 			pattern = Pattern.compile(Config.CLAN_NAME_TEMPLATE);
-		}
-		catch(PatternSyntaxException e)
-		{
+		} catch (PatternSyntaxException e) {
 			_log.warn("ERROR : Clan name pattern of config is wrong!", e);
 			pattern = Pattern.compile(".*");
 		}
 
 		Matcher match = pattern.matcher(clanName);
 
-		if(!match.matches())
-		{
+		if (!match.matches()) {
 			player.sendPacket(new SystemMessage(SystemMessageId.CLAN_NAME_INCORRECT));
 			return false;
 		}
@@ -267,32 +228,24 @@ public class ClanTable
 		return true;
 	}
 
-	@SuppressWarnings("resource")
-	public synchronized void destroyClan(int clanId, Connection con)
-	{
+	public synchronized void destroyClan(int clanId, Connection con) {
 		L2Clan clan = getClan(clanId);
 
-		if(clan == null)
-		{
+		if (clan == null) {
 			return;
 		}
 
 		L2PcInstance leader = null;
-		if(clan.getLeader() != null)
-		{
+		if (clan.getLeader() != null) {
 			leader = clan.getLeader().getPlayerInstance();
 		}
 
-		if(leader != null)
-		{
-			if(Config.CLAN_LEADER_COLOR_ENABLED && clan.getLevel() >= Config.CLAN_LEADER_COLOR_CLAN_LEVEL && leader != null)
-			{
-				if(Config.CLAN_LEADER_COLORED == 1)
-				{
+		if (leader != null) {
+			if (Config.CLAN_LEADER_COLOR_ENABLED && clan.getLevel() >= Config.CLAN_LEADER_COLOR_CLAN_LEVEL
+					&& leader != null) {
+				if (Config.CLAN_LEADER_COLORED == 1) {
 					leader.getAppearance().setNameColor(0x000000);
-				}
-				else
-				{
+				} else {
 					leader.getAppearance().setTitleColor(0xFFFF77);
 				}
 			}
@@ -302,29 +255,23 @@ public class ClanTable
 
 		int castleId = clan.getHasCastle();
 
-		if(castleId == 0)
-		{
-			for(Siege siege : SiegeManager.getInstance().getSieges())
-			{
+		if (castleId == 0) {
+			for (Siege siege : SiegeManager.getInstance().getSieges()) {
 				siege.removeSiegeClan(clanId);
 			}
 		}
 
 		L2ClanMember leaderMember = clan.getLeader();
 
-		if(leaderMember == null)
-		{
+		if (leaderMember == null) {
 			clan.getWarehouse().destroyAllItems("ClanRemove", null, null);
-		}
-		else
-		{
+		} else {
 			clan.getWarehouse().destroyAllItems("ClanRemove", clan.getLeader().getPlayerInstance(), null);
 		}
 
 		leaderMember = null;
 
-		for(L2ClanMember member : clan.getMembers())
-		{
+		for (L2ClanMember member : clan.getMembers()) {
 			clan.removeClanMember(member.getName(), 0);
 		}
 
@@ -336,10 +283,8 @@ public class ClanTable
 		_clans.remove(clanId);
 		IdFactory.getInstance().releaseId(clanId);
 
-		try
-		{
-			if(con == null)
-			{
+		try {
+			if (con == null) {
 				con = L2DatabaseFactory.getInstance().getConnection();
 			}
 			PreparedStatement statement = con.prepareStatement("DELETE FROM clan_data WHERE clan_id = ?");
@@ -363,65 +308,49 @@ public class ClanTable
 			statement.setInt(2, clanId);
 			statement.execute();
 
-			if(leader == null && leaderId != 0 && Config.CLAN_LEADER_COLOR_ENABLED && clanLvl >= Config.CLAN_LEADER_COLOR_CLAN_LEVEL)
-			{
-				if(Config.CLAN_LEADER_COLORED == 1)
-				{
+			if (leader == null && leaderId != 0 && Config.CLAN_LEADER_COLOR_ENABLED
+					&& clanLvl >= Config.CLAN_LEADER_COLOR_CLAN_LEVEL) {
+				if (Config.CLAN_LEADER_COLORED == 1) {
 					statement = con.prepareStatement("UPDATE characters SET name_color = '000000' WHERE odj_Id = ?");
-				}
-				else
-				{
+				} else {
 					statement = con.prepareStatement("UPDATE characters SET title_color = 'FFFF77' WHERE odj_Id = ?");
 				}
 				statement.setInt(1, leaderId);
 				statement.execute();
 			}
 
-			if(castleId != 0)
-			{
+			if (castleId != 0) {
 				statement = con.prepareStatement("UPDATE castle SET taxPercent = 0 WHERE id = ?");
 				statement.setInt(2, castleId);
 				statement.execute();
 			}
 
 			statement.close();
-		}
-		catch(Exception e)
-		{
+		} catch (Exception e) {
 			_log.warn("error while removing clan in db", e);
-		}
-		finally
-		{
-			ResourceUtil.closeConnection(con); 
+		} finally {
+			ResourceUtil.closeConnection(con);
 		}
 	}
 
-	public void scheduleRemoveClan(final int clanId)
-	{
-		ThreadPoolManager.getInstance().scheduleGeneral(new Runnable()
-		{
+	public void scheduleRemoveClan(final int clanId) {
+		ThreadPoolManager.getInstance().scheduleGeneral(new Runnable() {
 			@Override
-			public void run()
-			{
-				if(getClan(clanId) == null)
-				{
+			public void run() {
+				if (getClan(clanId) == null) {
 					return;
 				}
 
-				if(getClan(clanId).getDissolvingExpiryTime() != 0)
-				{
+				if (getClan(clanId).getDissolvingExpiryTime() != 0) {
 					destroyClan(clanId, null);
 				}
 			}
 		}, getClan(clanId).getDissolvingExpiryTime() - System.currentTimeMillis());
 	}
 
-	public boolean isAllyExists(String allyName)
-	{
-		for(L2Clan clan : getClans())
-		{
-			if(clan.getAllyName() != null && clan.getAllyName().equalsIgnoreCase(allyName))
-			{
+	public boolean isAllyExists(String allyName) {
+		for (L2Clan clan : getClans()) {
+			if (clan.getAllyName() != null && clan.getAllyName().equalsIgnoreCase(allyName)) {
 				return true;
 			}
 		}
@@ -429,8 +358,7 @@ public class ClanTable
 		return false;
 	}
 
-	public void storeclanswars(int clanId1, int clanId2)
-	{
+	public void storeclanswars(int clanId1, int clanId2) {
 		L2Clan clan1 = ClanTable.getInstance().getClan(clanId1);
 		L2Clan clan2 = ClanTable.getInstance().getClan(clanId2);
 
@@ -440,11 +368,11 @@ public class ClanTable
 		clan2.broadcastClanStatus();
 
 		Connection con = null;
-		try
-		{
+		try {
 			con = L2DatabaseFactory.getInstance().getConnection();
 			PreparedStatement statement;
-			statement = con.prepareStatement("REPLACE INTO clan_wars (clan1, clan2, wantspeace1, wantspeace2) VALUES (?, ?, ?, ?)");
+			statement = con.prepareStatement(
+					"REPLACE INTO clan_wars (clan1, clan2, wantspeace1, wantspeace2) VALUES (?, ?, ?, ?)");
 			statement.setInt(1, clanId1);
 			statement.setInt(2, clanId2);
 			statement.setInt(3, 0);
@@ -452,25 +380,23 @@ public class ClanTable
 			statement.execute();
 			statement.close();
 			statement = null;
-		}
-		catch(Exception e)
-		{
+		} catch (Exception e) {
 			_log.error("could not store clans wars data", e);
-		}
-		finally
-		{
-			ResourceUtil.closeConnection(con); 
+		} finally {
+			ResourceUtil.closeConnection(con);
 		}
 
-		clan1.broadcastToOnlineMembers(new SystemMessage(SystemMessageId.CLAN_WAR_DECLARED_AGAINST_S1_IF_KILLED_LOSE_LOW_EXP).addString(clan2.getName()));
-		clan2.broadcastToOnlineMembers(new SystemMessage(SystemMessageId.CLAN_S1_DECLARED_WAR).addString(clan1.getName()));
+		clan1.broadcastToOnlineMembers(
+				new SystemMessage(SystemMessageId.CLAN_WAR_DECLARED_AGAINST_S1_IF_KILLED_LOSE_LOW_EXP)
+						.addString(clan2.getName()));
+		clan2.broadcastToOnlineMembers(
+				new SystemMessage(SystemMessageId.CLAN_S1_DECLARED_WAR).addString(clan1.getName()));
 
 		clan1 = null;
 		clan2 = null;
 	}
 
-	public void deleteclanswars(int clanId1, int clanId2)
-	{
+	public void deleteclanswars(int clanId1, int clanId2) {
 		L2Clan clan1 = ClanTable.getInstance().getClan(clanId1);
 		L2Clan clan2 = ClanTable.getInstance().getClan(clanId2);
 
@@ -480,8 +406,7 @@ public class ClanTable
 		clan2.broadcastClanStatus();
 
 		Connection con = null;
-		try
-		{
+		try {
 			con = L2DatabaseFactory.getInstance().getConnection();
 			PreparedStatement statement;
 			statement = con.prepareStatement("DELETE FROM clan_wars WHERE clan1 = ? AND clan2 = ?");
@@ -491,64 +416,52 @@ public class ClanTable
 
 			statement.close();
 			statement = null;
-		}
-		catch(Exception e)
-		{
+		} catch (Exception e) {
 			_log.warn("could not restore clans wars data", e);
-		}
-		finally
-		{
-			ResourceUtil.closeConnection(con); 
+		} finally {
+			ResourceUtil.closeConnection(con);
 		}
 
-		clan1.broadcastToOnlineMembers(new SystemMessage(SystemMessageId.WAR_AGAINST_S1_HAS_STOPPED).addString(clan2.getName()));
-		clan2.broadcastToOnlineMembers(new SystemMessage(SystemMessageId.CLAN_S1_HAS_DECIDED_TO_STOP).addString(clan1.getName()));
+		clan1.broadcastToOnlineMembers(
+				new SystemMessage(SystemMessageId.WAR_AGAINST_S1_HAS_STOPPED).addString(clan2.getName()));
+		clan2.broadcastToOnlineMembers(
+				new SystemMessage(SystemMessageId.CLAN_S1_HAS_DECIDED_TO_STOP).addString(clan1.getName()));
 	}
 
-	public void checkSurrender(L2Clan clan1, L2Clan clan2)
-	{
+	public void checkSurrender(L2Clan clan1, L2Clan clan2) {
 		int count = 0;
 
-		for(L2ClanMember player : clan1.getMembers())
-		{
-			if(player != null && player.getPlayerInstance().getWantsPeace() == 1)
-			{
+		for (L2ClanMember player : clan1.getMembers()) {
+			if (player != null && player.getPlayerInstance().getWantsPeace() == 1) {
 				count++;
 			}
 		}
 
-		if(count == clan1.getMembers().length - 1)
-		{
+		if (count == clan1.getMembers().length - 1) {
 			clan1.deleteEnemyClan(clan2);
 			clan2.deleteEnemyClan(clan1);
 			deleteclanswars(clan1.getClanId(), clan2.getClanId());
 		}
 	}
 
-	private void restorewars()
-	{
+	private void restorewars() {
 		Connection con = null;
-		try
-		{
+		try {
 			con = L2DatabaseFactory.getInstance().getConnection();
-			PreparedStatement statement = con.prepareStatement("SELECT clan1, clan2, wantspeace1, wantspeace2 FROM clan_wars");
+			PreparedStatement statement = con
+					.prepareStatement("SELECT clan1, clan2, wantspeace1, wantspeace2 FROM clan_wars");
 			ResultSet rset = statement.executeQuery();
 
-			while(rset.next())
-			{
+			while (rset.next()) {
 				getClan(rset.getInt("clan1")).setEnemyClan(rset.getInt("clan2"));
 				getClan(rset.getInt("clan2")).setAttackerClan(rset.getInt("clan1"));
 			}
 			rset.close();
 			statement.close();
-		}
-		catch(Exception e)
-		{
+		} catch (Exception e) {
 			_log.warn("could not restore clan wars data", e);
-		}
-		finally
-		{
-			ResourceUtil.closeConnection(con); 
+		} finally {
+			ResourceUtil.closeConnection(con);
 		}
 	}
 }
